# hyprland-better-share-picker

./: .gitignore  Cargo.toml  README.md  build.rs
scripts/: build-xdph-window-list.sh  update-protocol.sh
src/: main.rs  wayland.rs
