[package]
name = "hyprland-better-share-picker"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[dependencies]
iced = { version = "0.14.0", features = ["image"] }
smithay-client-toolkit = "0.20.0"
wayland-client = "0.31.11"
wayland-backend = "0.3.11"
wayland-protocols-wlr = { version = "0.3.9", features = ["client"] }
wayland-scanner = "0.31.7"
bitflags = "2.6.0"
